--- a/docs_src/mkdocs.yml
+++ b/docs_src/mkdocs.yml
@@ -19,9 +19,11 @@ theme:
     accent: purple
 nav:
   - Home: index.md
+  - Features: features.md
   - Attributes:
       - Notify: notify.md
       - Dependency Property: dependency-property.md
+  
 site_description: Automating the boring parts of WPF development.
 repo_url: https://github.com/rharrison891/Substrate
 repo_name: GitHub
