--- a/docs_src/mkdocs.yml
+++ b/docs_src/mkdocs.yml
@@ -23,6 +23,9 @@ nav:
   - Attributes:
       - Notify: notify.md
       - Dependency Property: dependency-property.md
+      - Theme: theme.md
+      - Icons: icons.md
+      - Fonts: fonts.md
   
 site_description: Automating the boring parts of WPF development.
 repo_url: https://github.com/rharrison891/Substrate
